sandbox/output
GildedRose.java:164: error: cannot find symbol
            .collect(Collectors.toList());
                     ^
  symbol:   variable Collectors
  location: class GildedRose
1 error
